accordion fixed text-align

--- a/exercises/accordion/accordion.css
+++ b/exercises/accordion/accordion.css
@@ -65,4 +65,5 @@ h4 {
 article {
   margin: 1.5vw;
   font-size: 1.8vw;
+  text-align: left;
 }
